--- a/packages.html
+++ b/packages.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Packages</title>
+    <title>Repositories</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/content.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -16,33 +16,9 @@
             <div id="profileDiv" class="profile-div"></div>
         </div>
         <div id="mainContentContainer" class="main-content-container">
-            
-            <div id="navbar" class="navbar-element">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Gitsub</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                          <a class="nav-link" href="index.html">Overview</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="repositories.html">Repositories</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="projects.html">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#">Packages</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </nav> 
-            </div>
+            <div id="navbar" class="navbar-element"></div>
+            <div id="mainContentDiv" class="main-content-div"></div>
+            <div id="formDiv" class="form-div"></div>
         </div>
     </div>
     <div id="footerContainer" class="footer-element"></div>
