last minute tweeks like changing some labels and testing

--- a/projects.html
+++ b/projects.html
@@ -32,10 +32,10 @@
                               <a class="nav-link" href="repositories.html">Repositories</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="projects.html">Projects</a>
+                              <a class="nav-link" href="packages.html">Packages</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">Packages</a>
+                              <a class="nav-link active" aria-current="page" href="#">Projects</a>
                             </li>
                           </ul>
                         </div>
