--- a/repositories.html
+++ b/repositories.html
@@ -28,7 +28,7 @@
                       <a class="nav-link" href="index.html">Overview</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="repositories.html">Repositories</a>
+                      <a class="nav-link active" aria-current="page" href="#">Repositories</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="projects.html">Projects</a>
