--- a/projects.html
+++ b/projects.html
@@ -48,5 +48,6 @@
         <div id="footerContainer" class="footer-element"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="projects.js"></script>
 </body>
 </html>
