--- a/repositories.html
+++ b/repositories.html
@@ -48,6 +48,7 @@
     <div id="footerContainer" class="footer-element"></div>
   </div>
   
+  <script src="/scripts/repo.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
