--- a/packages.html
+++ b/packages.html
@@ -49,6 +49,6 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-  <script src="scripts/packages.js"></script>
+  <script type= "module" src="scripts/packages.js"></script>
 </body>
 </html>
