--- a/repositories.html
+++ b/repositories.html
@@ -50,6 +50,6 @@
   
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-  <script src="/scripts/repo.js"></script>
+  <script type="module" src="/scripts/repo.js"></script>
 </body>
 </html>
