--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <div id="mainContentContainer" class="main-content-container">
           <div id="navbar" class="navbar-element">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <div class="container-fluid">
                 <div id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <ul class="nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="/">Overview</a>
                     </li>
