--- a/projects.html
+++ b/projects.html
@@ -16,14 +16,10 @@
             </div>
             <div id="mainContentContainer" class="main-content-container">
                 <div id="navbar" class="navbar-element">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                       <div class="container-fluid">
-                        <a class="navbar-brand" href="#">Gitsub</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <div id="navbarSupportedContent">
+                          <ul class="nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                               <a class="nav-link" href="index.html">Overview</a>
                             </li>
@@ -34,12 +30,12 @@
                               <a class="nav-link active" aria-current="page" href="#">Projects</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="packages.html">Packages</a>  
+                              <a class="nav-link" href="packages.html">Packages</a>
                             </li>
                           </ul>
                         </div>
                       </div>
-                    </nav> 
+                    </nav>
                 </div>
                 <div id="mainContentDiv" class="main-content-div"></div>
                 <div id="formDiv" class="form-div"></div>
