--- a/packages.html
+++ b/packages.html
@@ -17,7 +17,7 @@
         <div id="mainContentContainer" class="main-content-container">
             <div id="navbar" class="navbar-element">
               <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid">
+                <div class="w-100">
                   <div id="navbarSupportedContent">
                     <ul class="nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
