--- a/packages.html
+++ b/packages.html
@@ -15,11 +15,11 @@
             <div id="profileDiv" class="profile-div"></div>
         </div>
         <div id="mainContentContainer" class="main-content-container">
-            <div id="navbar" class="navbar-element">
-              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div id="navbar" class="navbar-element  mb-3">
+              <nav class="navbar navbar-expand-lg navbar-dark bkg-dark">
                 <div class="w-100">
                   <div id="navbarSupportedContent">
-                    <ul class="nav me-auto mb-2 mb-lg-0">
+                    <ul class="main-nav nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
                         <a class="nav-link" href="index.html">Overview</a>
                       </li>
