--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <div id="container" class="app-container">
+      <div id='logo-container'></div>
       <div id="pageContent" class="page-content">
         <div id="profileContainer" class="profile-container">
           <div id="profileDiv" class="profile-div"></div>
